# dj-ninja-auth

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pytest.ini  setup.cfg
.github/workflows/: deploy.yml
demo/: pyproject.toml
demo/csrf/: api.py
demo/demo/: api.py  config.py  settings.py  urls.py
demo/templates/registration/: password_reset_email.html
dj_ninja_auth/: __init__.py  app_settings.py  controller.py  forms.py  schema.py
dj_ninja_auth/authtoken/: controller.py
dj_ninja_auth/jwt/: app_settings.py  backends.py  controller.py
dj_ninja_auth/registration/: adapter.py  app_settings.py  controller.py  schema.py  schema_control.py
