[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Bhargav Singapuri <bhsingapuri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
dj-ninja-auth = {path = "..", develop = true}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
