[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Bhargav Singapuri <bhsingapuri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.0"
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"
dj-ninja-auth = {path = "../dist/dj-ninja-auth-0.1.10.tar.gz"}
django-allauth = "^0.59.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
